# STM32F103ZET6-linux

./: .gitignore  CMakeLists.txt  README.md  STM32F103ZETx_FLASH.ld  arm-none-eabi-gcc.cmake  dm4310_can_keyboard.cpp  flash.sh  implementation_plan.md  pc_keyboard_control.py  rpi_flash_stm32.sh  setup.sh  skill.md  task.md  wsl_stm32_autoload.sh  wsl_to_stm32.py
HARDWARE/DM4310/: dm4310_can.c
HARDWARE/ENCODER_MOTOR/: encoder_motor.c  encoder_motor.h
HARDWARE/KEY/: key.c
HARDWARE/LEGACY/20260409/: protocol_legacy.c
HARDWARE/MOTOR/: motor.c  motor.h
HARDWARE/MOTOR86/: motor86.c  motor86.h
HARDWARE/PROTOCOL/: protocol.c  protocol.h
SYSTEM/usart/: usart.c
USER/: KEY.map  KEY.uvguix.骆  KEY.uvoptx  KEY.uvprojx  startup_stm32f10x_hd.lst
USER_ENCODER_MOTOR/: main.c
USER_HELLO/: hello_ack.c  hello_ack.h  main.c
USER_MOTOR86/: main.c
build_encoder/: STM32_KEY_PROJECT.elf  STM32_KEY_PROJECT.hex  STM32_KEY_PROJECT.map
build_hello/: STM32_KEY_PROJECT.elf  STM32_KEY_PROJECT.hex  STM32_KEY_PROJECT.map
build_motor86/: STM32_KEY_PROJECT.elf  STM32_KEY_PROJECT.hex  STM32_KEY_PROJECT.map
firmware/: .gitignore  CMakeLists.txt  README.md  flash.sh  install_cubeprogrammer.sh  rpi_flash_stm32.sh
firmware/CORE/: startup_stm32f103xe_gcc.s
firmware/HARDWARE/DM4310/: dm4310_can.h
firmware/HARDWARE/DM_MULTI/: dm_multi_can.c  dm_multi_can.h
firmware/HARDWARE/GRIPPER42/: gripper42_tb6600.c  gripper42_tb6600.h
firmware/HARDWARE/KEY/: key.c
firmware/HARDWARE/PROTOCOL/: protocol.c  protocol.h
firmware/SYSTEM/sys/: sys.c
firmware/SYSTEM/usart/: usart.c
firmware/USER/: main.c  stm32f10x_it.c
firmware/USER_ARM_DM/: main.c
firmware/docs/: ARM_DM_CONTROL_GUIDE.md  GRIPPER_42_TB6600_ZEROING.md  dm4310_tune.csv  skill.md  三款电机参数对比表.xlsx
firmware/pi/: arm_car_control.py  pi_chassis_udp_forwarder.py  pi_serial_tcp_bridge.py
firmware/tools/: dm3510_diag.py  dm3510_reg_tool.py  dm_uart_calib.py  dm_usb_fix.py  dm_windows_fix.py  dmh3510_spin.py  pc_keyboard_control.py  wsl_to_stm32.py  xcan_bridge.py  xcan_to_vcan.py
ros2_ws/: .gitignore  README.md
ros2_ws/src/chassis_control/: package.xml  setup.py
ros2_ws/src/chassis_control/chassis_control/: logic_node.py
ros2_ws/src/stm32_robot_bridge/: CMakeLists.txt  package.xml
ros2_ws/src/stm32_robot_bridge/config/: serial_config.yaml
ros2_ws/src/stm32_robot_bridge/launch/: robot_bridge.launch.py
ros2_ws/src/stm32_robot_bridge/msg/: MotorCommand.msg  MotorStatus.msg
ros2_ws/src/stm32_robot_bridge/src/: chassis_state_udp_bridge_node.cpp  serial_bridge_node.cpp  teleop_keyboard_node.cpp
ros2_ws/src/stm32_serial_bridge/launch/: stm32_tuning_gui.launch.py
ros2_ws/src/stm32_serial_bridge/stm32_serial_bridge/: tuning_slider_gui.py
ros2_ws/src/wheeltec_bridge/: WHEELTEC_RPI_GUIDE.md  package.xml  setup.cfg  setup.py  setup_rpi_network.sh
ros2_ws/src/wheeltec_bridge/launch/: view_chassis.launch.py  wheeltec_teleop.launch.py
ros2_ws/src/wheeltec_bridge/rviz/: wheeltec_chassis.rviz
ros2_ws/src/wheeltec_bridge/urdf/: wheeltec_chassis.urdf
ros2_ws/src/wheeltec_bridge/wheeltec_bridge/: __init__.py  chassis_marker_node.py  keyboard_node.py  serial_node.py
